--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,37 @@
+:root{
+  --main-blue: #15cafa;
+}
 .App {
   text-align: center;
 }
 
+a{
+  text-decoration: none;
+  color: black;
+}
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+@media (max-width: 370px){
+  p{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display:block;
+    width: auto;
+  }
+
+  h3{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display:block;
+    width : 100px;
+  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
